[package]
name = "vehicle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.162.0"
tokio = { version = "1.22.0", features = ["full"] }
deno_ast = { version = "0.21.0", features = ["transpiling"] }
